tests/baselines/reference/throwType_function_parameter.errors.txt
tests/cases/compiler/throwType_function_parameter.ts(4,24): error TS2345: Argument of type 'number' is not assignable to parameter of type 'never'.
tests/cases/compiler/throwType_function_parameter.ts(4,24): error TS2838: Type instantiated results in a throw type saying: 
    No zero
tests/cases/compiler/throwType_function_parameter.ts(13,4): error TS2345: Argument of type 'string' is not assignable to parameter of type 'never'.
tests/cases/compiler/throwType_function_parameter.ts(13,4): error TS2838: Type instantiated results in a throw type saying: 
    "found ""str""


==== tests/cases/compiler/throwType_function_parameter.ts (4 errors) ====
    function checkParameterPosition<T extends number>(y: T extends 1234 ? throw 'No zero' : T) {
        y.toExponential()
    }
    checkParameterPosition(1234)
                           ~~~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'never'.
                           ~~~~
!!! error TS2838: Type instantiated results in a throw type saying: 
!!! error TS2838:     No zero
    checkParameterPosition(12345678)
    
    type MustNumber<T> = T extends number ? T : throw `"found "${TypeToString<T>}"`
    type MustNumber2<T> = T extends number ? T : throw `"found "${TypeToString<T>}"`
    function f2<T>(a: MustNumber<T>, b: MustNumber2<T>) {
        a = b
    }
    
    f2('str', {})
       ~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'never'.
       ~~~~~
!!! error TS2838: Type instantiated results in a throw type saying: 
!!! error TS2838:     "found ""str""
    